[package]
name = "ibd_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
flate2 = "1.0.25"
serde_json = "1.0.95"
num_enum = "0.6.0"
bytes = "1.4.0"
clap = { version = "4.0.32", features = ["derive"] }
console = "0.15.2"
